Fixing RHEL build script (#629)
Fixing RHEL build script.

Signed-off-by: Davis Benny <davis.benny@intel.com>